Fix (css): Remove letter spacing in speech and response characters for better readability

--- a/app.css
+++ b/app.css
@@ -84,7 +84,6 @@ speech value {
     /* border-bottom: 1px solid #000; */
 }
 speech value character {
-    margin-left: 5px;
     display: inline-block;
     vertical-align: top;
     border: 1px solid transparent;
@@ -127,7 +126,7 @@ response textarea {
     font-size: 1.5vw;
     text-align: left;
     /* border: none; */
-    letter-spacing: 0.25vw;
+    /* letter-spacing: 0.25vw; */
 }
 
 
